--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cypress": "^8.4.1",
     "cypress-file-upload": "^5.0.8",
     "cypress-grep": "^2.5.3",
-    "eslint": "^7.32.0"
+    "eslint": "^7.32.0",
+    "ansi-regex": ">=5.0.1"
   }
 }
